fixed logo being obstructed on small window sizes

--- a/public/styles.css
+++ b/public/styles.css
@@ -706,7 +706,7 @@ background: linear-gradient(
 }
 
 .bottom-100 {
-  bottom: 24rem;
+  bottom: 30rem;
 }
 
 .row1 {
